# dxgi_present_hook

./: CMakeLists.txt
injector/: CMakeLists.txt
injector/include/: load_library_r.h  process_id_snooper.h  process_injector.h
injector/src/: load_library_r.cpp  main.cpp  process_id_snooper.cpp  process_injector.cpp
present_hook/: CMakeLists.txt
present_hook/include/: d3d11_hook.h  overlay.h  reflective_loader.h  vtbls.h
present_hook/src/: d3d11_hook.cpp  dllmain.cpp  generate_injection_code.py  overlay.cpp  reflective_loader.cpp
